# ctag-tbd

./: .clang-format  .commitmsg  .dockerignore  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  CONTRIBUTING.md  HARDWARE_CONFIGURATIONS.md  LICENSE  README.md  TODO.txt  create_sd_archive.sh  create_unified_p4_firmware.sh  create_webui_update.sh  log.txt  partitions.csv  partitions_example.csv  partitions_no_sd.csv  pyproject.toml  readme.md  sdkconfig.defaults  sdkconfig.defaults.aem  sdkconfig.defaults.bba  sdkconfig.defaults.bba-serial  sdkconfig.defaults.bba1  sdkconfig.defaults.mk1  sdkconfig.defaults.mk2  sdkconfig.defaults.p4  sdkconfig.defaults.tbd-rp2350-only  sdkconfig.defaults.tbd-sd-only  sdkconfig.defaults.tbd-simple  version.hpp.in  versions.md
apps/desktop/: CMakeLists.txt
apps/desktop/src/: main.cpp
apps/esp32/: CMakeLists.txt  OTAManager.cpp  idf_component.yml  main.cpp
components/ableton_link/: CMakeLists.txt  idf_component.yml  link.cpp  link.hpp  readme.md
components/ctagSoundProcessor/: CMakeLists.txt  ctagDataModelBase.cpp  ctagDataModelBase.hpp  ctagResources.hpp  ctagSPAllocator.cpp  ctagSPAllocator.hpp  ctagSPDataModel.cpp  ctagSPDataModel.hpp  ctagSoundProcessor.hpp  ctagSoundProcessorAPCpp.cpp  ctagSoundProcessorAPCpp.hpp  ctagSoundProcessorAntique.cpp  ctagSoundProcessorAntique.hpp  ctagSoundProcessorBBDelay.cpp  ctagSoundProcessorBBDelay.hpp  ctagSoundProcessorBBeats.cpp  ctagSoundProcessorBBeats.hpp  ctagSoundProcessorBCSR.cpp  ctagSoundProcessorBCSR.hpp  ctagSoundProcessorBjorklund.cpp  ctagSoundProcessorBjorklund.hpp  ctagSoundProcessorCDelay.cpp  ctagSoundProcessorCDelay.hpp  ctagSoundProcessorCStrip.cpp  ctagSoundProcessorCStrip.hpp  ctagSoundProcessorCStripM.cpp  ctagSoundProcessorCStripM.hpp  ctagSoundProcessorClap.cpp  ctagSoundProcessorClap.hpp  ctagSoundProcessorClaude.cpp  ctagSoundProcessorClaude.hpp  ctagSoundProcessorDLoop.cpp  ctagSoundProcessorDLoop.hpp  ctagSoundProcessorDrumRack.cpp  ctagSoundProcessorDrumRack.hpp  ctagSoundProcessorDust.cpp  ctagSoundProcessorDust.hpp  ctagSoundProcessorEChorus.cpp  ctagSoundProcessorEChorus.hpp  ctagSoundProcessorEveryTrim.cpp  (+103 more)
components/drivers/: CMakeLists.txt  adc.cpp  adc.hpp  aic3254.cpp  aic3254.hpp  codec.cpp  codec.hpp  codec_bba.cpp  codec_bba.hpp  custom_sdmmc_cmd.cpp  display.cpp  display.hpp  es8311.cpp  es8311.hpp  es8388.cpp  es8388.hpp  font8x8_basic.h  fs.cpp  fs.hpp  gpio.cpp  gpio.hpp  idf_component.yml  led_rgb.cpp  led_rgb.hpp  led_rgb_bba.cpp  led_rgb_bba.hpp  midiuart.cpp  midiuart.hpp  mk2.hpp  pico_firmware_update.cpp  pico_firmware_update.hpp  pico_reset.cpp  pico_reset.hpp  picoboot3_master.cpp  picoboot3_master.hpp  rp2040_spi_stream.cpp  rp2040_spi_stream.hpp  rp2350_spi_stream.cpp  rp2350_spi_stream.hpp  ssd1306.c  (+8 more)
components/drivers/miniz/: ChangeLog.md
components/moog/: CMakeLists.txt  changes.md
components/mutable/: CMakeLists.txt  changes.md
main/: CMakeLists.txt  Calibration.cpp  Calibration.hpp  CalibrationModel.cpp  CalibrationModel.hpp  Control.cpp  Control.hpp  DeviceAPI.cpp  DeviceAPI.hpp  Display.cpp  Display.hpp  EngineDefinition.hpp  EngineDefinitionDataModel.cpp  EngineDefinitionDataModel.hpp  Favorites.cpp  Favorites.hpp  FavoritesModel.cpp  FavoritesModel.hpp  IOCapabilities.hpp  Kconfig.projbuild  MacroAPI.cpp  MacroAPI.hpp  MacroDefinition.hpp  MacroDeviceDefinition.cpp  MacroDeviceDefinition.hpp  MacroDeviceDefinitionDataModel.cpp  MacroDeviceDefinitionDataModel.hpp  MacroSPManager.cpp  MacroSoundPreset.cpp  MacroSoundPreset.hpp  MacroSoundPresetDataModel.cpp  MacroSoundPresetDataModel.hpp  MacroSoundPresetGroup.cpp  MacroSoundPresetGroup.hpp  MacroTranslator.cpp  MacroTranslator.hpp  Midi.cpp  Midi.hpp  OTAManager.cpp  OTAManager.hpp  (+37 more)
simulator/: CMakeLists.txt  SimDataModel.cpp  SimDataModel.hpp  SimSPManager.cpp  SimSPManager.hpp  SimStimulus.cpp  SimStimulus.hpp  Stimulator.cpp  Stimulator.hpp  WebServer.cpp  WebServer.hpp  readme.md  tbd-sim.cpp
simulator/data/: cfg_tbd_sim.jsn  cfg_tbd_sim.json
simulator/fake-idf/: esp_flash.c  esp_flash.h  esp_heap_caps.c  esp_heap_caps.h  esp_log.h  esp_random.h  esp_spi_flash.c  esp_spi_flash.h  esp_system.h  malloc.c  malloc.h
simulator/tests/: run_tests.cpp  test_ctagADSREnv.cpp  test_ctagADSREnv.hpp  test_fast_concave.cpp  test_fast_concave.hpp  test_format_param_value.cpp  test_format_param_value.hpp  test_fx1_tempo_divisor.cpp  test_fx1_tempo_divisor.hpp  test_fx_mixer_pan.cpp  test_fx_mixer_pan.hpp  test_predelay_ringbuf.cpp  test_predelay_ringbuf.hpp
simulator/tinywav/: LICENSE  README.md
simulator/www/: ui.html
tapp/: CMakeLists.txt  Serial.h  WebServer.cpp  WebServer.hpp  main.cpp  readme.md
tbd/: CMakeLists.txt
tbd/tbd_api/: CMakeLists.txt
tbd/tbd_calibration/: CMakeLists.txt  CalibrationModel.hpp
tbd/tbd_common/: CMakeLists.txt
tbd/tbd_config/: CMakeLists.txt
tbd/tbd_display/: CMakeLists.txt
tbd/tbd_drivers/: CMakeLists.txt  aic3254.cpp  gpio.hpp
tbd/tbd_helpers/: CMakeLists.txt  dsp-hints.txt
tbd/tbd_network/: CMakeLists.txt  network.cpp
tbd/tbd_presets/: CMakeLists.txt
tbd/tbd_sound_manager/: CMakeLists.txt
tbd/tbd_sound_processor/: CMakeLists.txt  ctagDataModelBase.cpp  ctagDataModelBase.hpp  ctagSPAllocator.cpp  ctagSPDataModel.cpp  ctagSPDataModel.hpp  ctagSoundProcessor.hpp  idf_component.yml
tbd/tbd_sound_registry/: CMakeLists.txt
tbd/tbd_sounds/: CMakeLists.txt  Kconfig.projbuild
tbd/tbd_storage/: CMakeLists.txt  ctagSampleRom.cpp  port.cmake
tbd/tbd_system/: CMakeLists.txt
tbd/tbd_version/: CMakeLists.txt
tbd4vcv/: CMakeLists.txt  cibuild-linux.sh  cibuild-win-msys2mingw-win64.sh  plugin.json  readme.md  steps4ghactionwin.txt
tbd4vcv/src/: AsyncFileReader.h  FavoritesModel.hpp  SPManager.cpp  SPManager.hpp  SPManagerDataModel.cpp  SPManagerDataModel.hpp  SimDataModel.cpp  WebServer.cpp  WebServer.hpp  plugin.cpp  plugin.hpp  tbd4vcv.cpp
tools/tbd_tools/: __init__.py  __main__.py  app_common.py  config_cmd.py  docs_cmd.py  firmware_cmd.py  plugins_cmd.py  project_cmd.py  pyproject.toml  tbd_tool.py
(+2496 files in other folders)
