[tool.poetry]
name = "tbd"
version = "0.1.0"
description = "TBD Audio Processor"
authors = ["Michael Jonathan Lee <code.mjlee@gmail.com>"]
license = "GPL 3.0"

packages = [
    { include = "tbd_core" }
]

[tool.poetry.dependencies]
python = "^3.12"
esphome = "^2025.5.2"
nanopb = "^0.4.9.1"
proto-schema-parser = "^1.6.0"
pyhumps = "^3.8.0"
jinja2 = "^3.1.6"
cxxheaderparser = "^1.5.0"
pydantic = "^2.11.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
