add_subdirectory(tbd_version)
add_subdirectory(tbd_system)
add_subdirectory(tbd_sound_processor)
add_subdirectory(tbd_sounds)
add_subdirectory(tbd_sound_registry)
add_subdirectory(tbd_helpers)
add_subdirectory(tbd_network)
add_subdirectory(tbd_storage)
add_subdirectory(tbd_drivers)
add_subdirectory(tbd_sound_manager)
add_subdirectory(tbd_presets)
add_subdirectory(tbd_display)
add_subdirectory(tbd_config)
add_subdirectory(tbd_calibration)
